--- a/_posts/2025-04-03-cookies.md
+++ b/_posts/2025-04-03-cookies.md
@@ -32,3 +32,6 @@ Ada beberapa jenis _cookies web_ yang ada di internet, berikut adalah diantarany
 * Dihasilkan oleh situs web yang dikunjungi langsung oleh pengguna.
 * Biasanya digunakan untuk meningkatkan pengalaman pengguna di situs tersebut.
 
+### 4. Third-Party Cookies
+* Dihasilkan oleh pihak ketiga, seperti pengiklan atau penyedia analitik.
+* Digunakan untuk menargetkan iklan berdasarkan perilaku pengguna di berbagai situs.
