--- a/_posts/2025-04-03-cookies.md
+++ b/_posts/2025-04-03-cookies.md
@@ -3,7 +3,7 @@ layout: post
 title: Mengenal tentang Cookies Web
 date: 2025-04-03 00:00:05
 permalink: /cookies/
-categories: [informasi]
+categories: [Informasi]
 tags: [cookies, cookies web]
 lang: id
 image: https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjiiAlBKvtNSvw-9P80ogPmrZRQ_fbQn3vl6xD7Q4tnaAsvlRPwumU1mEh94jl1xozSo6Y90sRQXT-xGxFYpsG3YKpV-opUgv2K3hrZiJ9hI0A0QXkx_U78LEh5dn3J-KZF3spnYDU3sUjjfi-JC2DoFLPdBf9HmJHKAKMA-4WoPYqLMhbQl618xrNSzcA/s0-rw/cookies.jpeg
