--- a/_posts/2025-04-03-cookies.md
+++ b/_posts/2025-04-03-cookies.md
@@ -4,7 +4,7 @@ title: Mengenal tentang Cookies Web
 date: 2025-04-03 00:00:05
 permalink: /cookies/
 categories: [Informasi]
-tags: [cookies, cookies web]
+tags: [cookies]
 lang: id
 image: https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjiiAlBKvtNSvw-9P80ogPmrZRQ_fbQn3vl6xD7Q4tnaAsvlRPwumU1mEh94jl1xozSo6Y90sRQXT-xGxFYpsG3YKpV-opUgv2K3hrZiJ9hI0A0QXkx_U78LEh5dn3J-KZF3spnYDU3sUjjfi-JC2DoFLPdBf9HmJHKAKMA-4WoPYqLMhbQl618xrNSzcA/s0-rw/cookies.jpeg
 description: Penjelasan ringkas tentang apa itu cookies web, fungsi, cara penggunaannya dan beberapa hal lain yang sering ditanyakan seputar cookies web.
