--- a/_posts/2025-04-03-cookies.md
+++ b/_posts/2025-04-03-cookies.md
@@ -14,6 +14,23 @@ author: ASIBUKA Group
 ---
 Pernahkah Anda masuk ke suatu situs dan langsung melihat rekomendasi produk atau tetap dalam keadaan login tanpa harus memasukkan kata sandi lagi? Semua itu terjadi berkat _cookies web_. Tapi, apa sebenarnya _cookies_ itu, bagaimana cara kerjanya, dan apakah aman bagi privasi Anda? Simak penjelasan lengkapnya di bawah ini!
 
+<nav class="toc-wrapper" id="toc" role="navigation" aria-label="Table of Contents">
+  <details open>
+    <summary>📑 Daftar Isi</summary>
+    <ul id="toc-list">
+      {% assign headers = content | split: '\n' %}
+      {% assign index = 0 %}
+      {% for line in headers %}
+        {% if line contains '## ' %}
+          {% assign text = line | remove: '## ' | strip %}
+          {% assign slug = text | slugify %}
+          <li><a href="#{{ slug }}">{{ text }}</a></li>
+        {% endif %}
+      {% endfor %}
+    </ul>
+  </details>
+</nav>
+
 ## Pengertian Cookies Web
 _Cookies web_ adalah _file_ kecil yang dibuat oleh situs web dan disimpan di perangkat pengguna melalui peramban. _Cookies_ berfungsi untuk menyimpan informasi tertentu, seperti preferensi pengguna, sesi login, dan data aktivitas pengguna saat menjelajahi situs web.
 
